# mcp-graph-research

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent-controller/: main.py
agent_controller/: main.py
data/false_conjectures/: CONJ-FALLBACK-01.json  TEST-001.json  TEST-125.json  TEST-150.json  TEST-268.json  TEST-322.json  TEST-331.json  TEST-359.json  TEST-453.json  TEST-492.json  TEST-50.json  TEST-504.json  TEST-513.json  TEST-587.json  TEST-800.json  TEST-880.json  TEST-891.json  TEST-904.json
data/true_conjectures/: TEST-18.json  TEST-389.json  TEST-65.json  TEST-678.json  TEST-719.json  TEST-769.json  TEST-808.json  TEST-967.json
mcp-graph-tools/: converter.py  server.py
mcp-invalidator/: engine.py  server.py
mcp-prover/: server.py
mcp-web-dashboard/: app.py
mcp-web-dashboard/static/: app.js  style.css
mcp-web-dashboard/templates/: base.html  index.html  test.html
shared_models/: conjecture.py
