[project]
name = "mcp-graph-research"
version = "0.1.0"
description = "Environnement de recherche IA pour la théorie des graphes basé sur le Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6.3",
    "networkx>=3.2.1",
    "requests>=2.31.0",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "A", "C4"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
